--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "next": "^15.2.3",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
     "react-markdown": "^10.1.0",
