--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "name": "my_blog",
   "version": "0.1.0",
-  "private": true,
-  "scripts": {
+  "private": true,  "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "vercel-build": "next build"
+    "lint": "next lint"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.20.0",
